# MatiOS-SDK-Rust

./: Cargo.toml  LICENSE  Readme.md
.cargo/: config.toml
src/: allocator.rs  lib.rs  process_start_info.rs  typedValue.rs  typed_value.rs  uuid.rs
src/gui/: bitmap.rs  mod.rs
src/gui/controls/: flex.rs  mod.rs  text.rs
src/resources/: mod.rs
src/syscalls/: mod.rs  syscall_id.rs
src/syscalls/debug/: mod.rs  print_v1.rs
src/syscalls/process/: current_process_info_v1.rs  mod.rs
src/syscalls/resources/: call_resource_method_v1.rs  create_resource_v1.rs  get_resource_by_path_v1.rs  get_resource_info_v1.rs  mod.rs  request_resource_v1.rs
