[package]
name = "MatiOS-SDK-Rust"
version = "0.1.12"
edition = "2021"
authors = ["Mateusz Krawczyk <mateusz.krawczyk@green-code.studio>"]
repository = "https://github.com/matrix0123456789/MatiOS-SDK-Rust"
description = "Sdk for creating apps for MatiOS in rust"
license = "MIT"
build = false

[dependencies]
once_cell = { version = "1.21.4", default-features = false, features = ["alloc"]}

[lib]
name = "MatiOS_SDK"
path = "src/lib.rs"